--- a/step_definitions/Steps_Verbose_Output.cls
+++ b/step_definitions/Steps_Verbose_Output.cls
@@ -94,14 +94,14 @@ Public Property Get Examples() As Collection
     Set Examples = examples_list
 End Property
 
-Public Function run_step(step_definition As Collection) As Variant
+Public Function run_step(step_definition As String) As Variant
 
     Dim output_line As Variant
     Dim output_lines As Variant
     Dim index As Integer
     
     On Error GoTo error_handler
-    Select Case step_definition.Item(TExampleRunner_Old.ATTR_STEP_HEAD) & " " & step_definition.Item(TExampleRunner_Old.ATTR_STEP_BODY)
+    Select Case step_definition
     
         Case "Given a feature with a description ""description line 1 <newline> description line 2"""
             Set m_report_msg = TReport.build_msg_package(TReport.TYPE_DESC, "description line 1" & vbLf & "description line 2", vbNullString, vbNullString)
@@ -182,5 +182,5 @@ Public Property Get tags() As Variant
 End Property
 
 Private Sub pending(pending_msg)
-    TFeatureRunner.pending pending_msg
+    TStepRunner.pending pending_msg
 End Sub
